2006-03-17  Vlad Seryakov  <seryakov@users.sf.net>

	configure.in:
        include/ns.h:
        nscp/nscp.c:
        nsd/crypt.c:
        nsperm/nsperm.c: For Linux systems use native crypt which supports
        MD5 digests, increase encryption buffer
        
2006-03-13  Vlad Seryakov  <seryakov@users.sf.net>

	Makefile: Made install modular so parts can be installed
	without installing everything

2006-03-12  Vlad Seryakov  <seryakov@users.sf.net>

	tcl/util.tcl: fixed typo in ns_setexpires proc

2006-03-12  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* drv/driver.c: Fixed endless loop in SpoolerThread.
	Also reformated, newly indented and made more readable.

	* nsd/nsd.h: Cosmetic changes. Added typedefs for 
	some internally used structures. Added typdefs for new
	NsBlockSignal, NsRestoreSignal and def for NS_SIGPIPE.

	* tests/testserver/modules/testhttp.tcl: Added
	nstest_http_write function to upload content.
	Fixed to report HTTP status as often as possible.

	* tests/http.test: Removed ns_log warnings before
	running http tests 4.4, 4.5 and 4.6

	* tcl/http.tcl: Added _ns_http_write wrapper to
	uplad content.

	* tests/ns_thread.test: Thread ID's can be very small 
	(single digit numbers) on Solaris. Also, fixed regexps
	for testing thread/mutex/condvar handles on Solaris.
	
	* nsd/nsmain.c:
	* nsd/unix.c:
	* nsd/nswin32.c: Added blocking for signals, more
	specifically for the SIGPIPE signal.
	Otherwise, our process may get killed during net tests.

2006-03-10  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/callbacks.c:
	* nsd/tclcallbacks.c:
	* nslog/nslog.c: Remove old variants of shutdown registration:
	Ns_RegisterServerShutdown(), Ns_RegisterAtServerShutdown() and
	Ns_RegisterShutdown().

	Ns_RegisterAtShutdown() now takes a Ns_ShutdownProc callback, whos
	signature includes an absolute timeout arg. This callback will be
	run twice:  First with a NULL timeout to indicate shutdown